add new page title and favicon, done some minor fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Template</title>
+        <title>Infinite Scroll</title>
         <link rel="icon" type="image/png" href="favicon.png" />
         <link
             rel="stylesheet"
@@ -13,19 +13,10 @@
     </head>
     <body>
         <h1>Unsplash API - Infinite Scroll</h1>
-        <div class="loader" id="loader" hidden>
+        <div class="loader" id="loader">
             <img src="./images/loader_100px.svg" alt="" />
         </div>
-        <div class="image-container" id="image-container">
-            <img
-                src="https://plus.unsplash.com/premium_photo-1697215175168-c363c30539bb?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt=""
-            />
-            <img
-                src="https://plus.unsplash.com/premium_photo-1697215175168-c363c30539bb?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt=""
-            />
-        </div>
+        <div class="image-container" id="image-container"></div>
         <!-- Script -->
         <script src="script.js"></script>
     </body>
